package Entidades;

import Entidades.Jugadores.Jugador;
import Entidades.Premios.Premio;

public interface Interactuable {
    public abstract void interactuar(Jugador jugador);

}
