@startuml InformacionMapa

interface InformacionMapa{
    +{abstract}construirCamino(LinkedList<Casillero> casilleros)
}

class InformacionMapaEnJSON{
    -ancho: int
    -largo: int
    -celdas: JsonNode
    +InformacionMapaEnJSON(rutaArchivo: String)
    +construirCamino(camino: LinkedList<Casillero>)
    -conseguirNumero(dato: String, informacion: JsonNode, limiteMaximo:int): int
    -revisarSiLosDatosNecesariosEstan(informacion: JsonNode)
}

class InformacionJSON{
    -rutaDelArchivo: String
    +InformacionJSON(rutaDelArchivo: String)
    +devolverInformacionDelArchivo(): JsonNode
}

class ConstructorPremio{
    +construirPremio(tipo: String): Premio
}

class ConstructorObstaculo{
    +construirObstaculo(tipo: String): Obstaculo
}

class InformacionMapaLinealEnMatriz{
    +InformacionMapaLinealEnMatriz(informacion: Interactuable[][])
    +construirCamino(camino: LinkedList<Casillero>)
}

interface Interactuable{
    +{abstract} interactuar(jugador: Jugador)
}

InformacionMapa <|.. InformacionMapaEnJSON
InformacionMapa <|.. InformacionMapaLinealEnMatriz

InformacionMapaEnJSON ...> InformacionJSON
InformacionMapaEnJSON ..> ConstructorObstaculo
InformacionMapaEnJSON ..> ConstructorPremio

ConstructorObstaculo ..> Interactuable
ConstructorPremio ..> Interactuable

InformacionMapaLinealEnMatriz "1 " --> "*" Interactuable

@enduml